--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,7 +1,10 @@
 extends base.pug
 
-block head 
-    title Home | Wetube
 
 block content
-    h1 Home!
+  h2 Welcome here you will see the trending videos
+  ul
+      each video in videos
+          li=video
+      else
+          li Sorry nothing found.
