--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -8,8 +8,9 @@ block content
     input(placeholder="Password", name="password", type="password", required)
     input(type="submit", value="Login")
     br
-    a(href="users/github/start")
-      Continue With Github &rarr;
+    a(href="users/github/start") Continue With Github &rarr;
+    br
+    a(href="users/kakao/start") Login with Kakao &rarr;
   hr
   div
     span Don't have an account?
