--- a/src/views/edit-profile.pug
+++ b/src/views/edit-profile.pug
@@ -3,7 +3,9 @@ extends base
 block content
   if errorMessage
     span= errorMessage
-  form(method="POST")
+  form(method="POST", enctype="multipart/form-data")
+    label(for="avatar") Avatar
+    input#avatar(type="file", name="avatar", accept="image/*")
     input(
       placeholder="Name",
       name="name",
@@ -33,3 +35,6 @@ block content
       value=loggedInUser.location
     )
     input(type="submit", value="Update Profile")
+    if !loggedInUser.socialOnly
+      hr
+      a(href="change-password") Change Password &rarr;
