--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -1,5 +1,17 @@
-@import "./variables";
+@import "./config/variables.scss";
+@import "./config/reset.scss";
 
+//Components
+
+//Screens
+//Defaults
+a {
+  color: inherit;
+  text-decoration: none;
+}
 body {
-  background-color: $tomato;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: $bg;
+  color: white;
 }
