--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,9 +1,20 @@
 extends base.pug
 include mixins/video
 
-
 block content
-  each video in videos
+  .video-grid
+    each video in videos
       +video(video)
-  else
-      li Sorry nothing found.
+      +video(video)
+      +video(video)
+      +video(video)
+      +video(video)
+      +video(video)
+      +video(video)
+      +video(video)
+      +video(video)
+      +video(video)
+      +video(video)
+      +video(video)
+    else
+      span.empty__message No videos found
