--- a/src/views/join.pug
+++ b/src/views/join.pug
@@ -16,7 +16,9 @@ block content
     )
     input(placeholder="Location", name="location", type="text", required)
     input(type="submit", value="Join")
-  hr
-  div
-    span Already have an account?
-      a(href="/login") Log in now &rarr;
+    .social-login
+      include partials/github-login
+      include partials/kakao-login
+  .auth-switch
+    span Already have an account?&nbsp;
+    a(href="/login") Log in now &rarr;
