--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -1,8 +1,13 @@
 header
-  a(href="/")
+  a.header__logo(href="/")
     i.fab.fa-youtube
+    span Premium
+    span KR
   nav
     ul
+      li
+        a(href="/search")
+          i.fas.fa-search
       if loggedIn
         li
           a(href="/videos/upload") Upload Video
@@ -14,8 +19,6 @@ header
           a(href="/users/logout") Log Out
       else
         li
-          a(href="/join") Join
-        li
           a(href="/login") Login
-      li
-        a(href="/search") Search
+        li
+          a.header__btn(href="/join") Join
