--- a/src/views/users/profile.pug
+++ b/src/views/users/profile.pug
@@ -2,7 +2,11 @@ extends ../base
 include ../mixins/video
 
 block content
-  each video in user.videos
-    +video(video)
-  else
-    li Sorry nothing found.
+  .profile__data
+    img.avatar(src="/" + user.avatarUrl)
+    h3= user.name
+  .video-grid
+    each video in user.videos
+      +video(video)
+    else
+      span.empty__message No videos found
