--- a/src/client/scss/components/forms.scss
+++ b/src/client/scss/components/forms.scss
@@ -1,13 +1,15 @@
 form {
   max-width: 420px;
   margin: 0 auto;
-  padding: 30px;
-  background-color: rgba($color: #000000, $alpha: 0.5);
-  border-radius: 10px;
-  border: 1px solid rgba($color: #fff, $alpha: 0.2);
+  &:not(.search__form) {
+    padding: 30px;
+    background-color: rgba($color: #000000, $alpha: 0.5);
+    border-radius: 10px;
+    border: 1px solid rgba($color: #fff, $alpha: 0.2);
+  }
 }
 
-input {
+input:not(input[type="range"]) {
   all: unset;
   padding: 15px 20px;
   border-radius: 5px;
