--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,25 +1,27 @@
 extends base.pug
 
 block content
-  video(src="/" + video.fileUrl, controls)
-  div
-    button#play Play
-    button#mute Mute
-    input#volume(type="range", step="0.1", value=0.5, min="0", max="1")
+    video(src="/" + video.fileUrl, controls)
     div
-      span#currentTime 00:00 &nbsp;
-      span / &nbsp;
-      span#totalTime 00:00
+        button#play Play
+        button#mute Mute
+        input#volume(type="range", step="0.1", value=0.5, min="0", max="1")
+        div
+            span#currentTime 00:00
+            span &nbsp;/&nbsp;
+            span#totalTime 00:00
+        div
+            input#timeline(type="range", step="1", value="0", min="0")
 
-    //- div
-    //-     p= video.description
-    //-     small= video.createdAt
-    //- div
-    //-     small Uploaded by
-    //-     a(href=`/users/${video.owner._id}`)= video.owner.name
-    //- if String(video.owner._id) === String(loggedInUser._id)
-    //-     a(href=`${video.id}/edit`) Edit Video &rarr;
-    //-     br
-    //-     a(href=`${video.id}/delete`) Delete Video &rarr;
+        //- div
+        //-     p= video.description
+        //-     small= video.createdAt
+        //- div
+        //-     small Uploaded by
+        //-     a(href=`/users/${video.owner._id}`)= video.owner.name
+        //- if String(video.owner._id) === String(loggedInUser._id)
+        //-     a(href=`${video.id}/edit`) Edit Video &rarr;
+        //-     br
+        //-     a(href=`${video.id}/delete`) Delete Video &rarr;
 block scripts
-  script(src="/static/js/videoPlayer.js") 
+    script(src="/static/js/videoPlayer.js") 
