--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -3,18 +3,33 @@ extends base.pug
 block content
     #videoContainer
         video(src="/" + video.fileUrl)
-        #videoControls
-            button#play Play
-            button#mute Mute
-            input#volume(type="range", step="0.1", value=0.5, min="0", max="1")
+        #videoControls.videoControls
+            .videoControls__play
+                span#play.videoControls__playBtn
+                    i.fas.fa-play
+                .videoControls__time
+                    span#currentTime 00:00
+                    span &nbsp;/&nbsp;
+                    span#totalTime 00:00
+            input#timeline.videoControls__timeline(
+                type="range",
+                step="1",
+                value="0",
+                min="0"
+            )
+            .videoControls__volume
+                input#volume(
+                    type="range",
+                    step="0.1",
+                    value=0.5,
+                    min="0",
+                    max="1"
+                )
+                span#mute
+                    i.fas.fa-volume-up
             div
-                span#currentTime 00:00
-                span &nbsp;/&nbsp;
-                span#totalTime 00:00
-            div
-                input#timeline(type="range", step="0.5", value="0", min="0")
-            div
-                button#fullScreen Enter Full Screen
+                span#fullScreen
+                    i.fas.fa-expand
 
         //- div
         //-     p= video.description
