--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -1,29 +1,34 @@
 extends base.pug
 
 block content
-  if errorMessage
-    span= errorMessage
-  form(method="POST", enctype="multipart/form-data")
-    labe(for="video") Video File
-    input#video(type="file", accept="video/*", required, name="video")
-    input(
-      placeholder="Title",
-      required,
-      type="text",
-      name="title",
-      maxlength=80
-    )
-    input(
-      placeholder="Description",
-      required,
-      type="text",
-      name="description",
-      minlength=20
-    )
-    input(
-      placeholder="Hashtags, separated by comma.",
-      required,
-      type="text",
-      name="hashtags"
-    )
-    input(type="submit", value="Upload Video")
+    div
+        button#startBtn Start Recording
+    if errorMessage
+        span= errorMessage
+    form(method="POST", enctype="multipart/form-data")
+        labe(for="video") Video File
+        input#video(type="file", accept="video/*", required, name="video")
+        input(
+            placeholder="Title",
+            required,
+            type="text",
+            name="title",
+            maxlength=80
+        )
+        input(
+            placeholder="Description",
+            required,
+            type="text",
+            name="description",
+            minlength=20
+        )
+        input(
+            placeholder="Hashtags, separated by comma.",
+            required,
+            type="text",
+            name="hashtags"
+        )
+        input(type="submit", value="Upload Video")
+
+block scripts
+    script(src="/static/js/recorder.js") 
