--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,7 +1,7 @@
 extends base.pug
 
 block content
-    #videoContainer
+    #videoContainer(data-id=video._id)
         video(src="/" + video.fileUrl)
         #videoControls.videoControls
             .videoControls__play
