--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -31,15 +31,24 @@ block content
                 span#fullScreen
                     i.fas.fa-expand
 
-        //- div
-        //-     p= video.description
-        //-     small= video.createdAt
-        //- div
-        //-     small Uploaded by
-        //-     a(href=`/users/${video.owner._id}`)= video.owner.name
-        //- if String(video.owner._id) === String(loggedInUser._id)
-        //-     a(href=`${video.id}/edit`) Edit Video &rarr;
-        //-     br
-        //-     a(href=`${video.id}/delete`) Delete Video &rarr;
+    div
+        p= video.description
+        small= video.createdAt
+        div
+            small Uploaded by
+            a(href=`/users/${video.owner._id}`)= video.owner.name
+        if String(video.owner._id) === String(loggedInUser._id)
+            a(href=`${video.id}/edit`) Edit Video &rarr;
+            br
+            a(href=`${video.id}/delete`) Delete Video &rarr;
+    if loggedIn
+        .video__comments
+            form.video__comment-form#commentForm
+                textarea(cols="30", rows="10", placeholder="Write a nice comment...") 
+                button Add Comment
+        
+
 block scripts
-    script(src="/static/js/videoPlayer.js") 
+    script(src="/static/js/videoPlayer.js")
+    script(src="/static/js/commentSection.js") 
+
