--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -42,11 +42,17 @@ block content
             br
             a(href=`${video.id}/delete`) Delete Video &rarr;
     if loggedIn
-        .video__comments
+        .video__add-comments
             form.video__comment-form#commentForm
                 textarea(cols="30", rows="10", placeholder="Write a nice comment...") 
                 button Add Comment
-        
+    div.video__comments
+        ul
+            each comment in video.comments.reverse()
+                li.video__comment
+                    i.fas.fa-comment
+                    span #{comment.text}
+            
 
 block scripts
     script(src="/static/js/videoPlayer.js")
