--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -60,6 +60,6 @@ main {
     animation-delay: 5s;
     &.error {
         background-color: tomato;
-        columns: white;
+        color: white;
     }
 }
