Edit/Delete comment

--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -55,8 +55,8 @@ block content
                     .control
                         if loggedIn
                                 if String(loggedInUser._id) === String(comment.owner)
-                                    i.fas.fa-pen.newEditCommentBtn
-                                    i.fas.fa-trash.newDeleteCommentBtn
+                                    i.fas.fa-pen#newEditCommentBtn
+                                    i.fas.fa-trash#newDeleteCommentBtn
             
 
 block scripts
