--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -23,7 +23,11 @@
                 if !loggedInUser.avatarUrl
                     span 😀
                 else
-                    img.header__avatar(src="/" + loggedInUser.avatarUrl)
+                    if loggedInUser.socialOnly
+                        img.header__avatar(src=loggedInUser.avatarUrl)
+                    else 
+                        img.header__avatar(src="/" + loggedInUser.avatarUrl)
+
             else
                 li
                     a(href="/login") Login
