--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -23,7 +23,7 @@
                 if !loggedInUser.avatarUrl
                     span 😀
                 else
-                    if loggedInUser.socialOnly
+                    if loggedInUser.avatarUrl.includes("github")
                         img.header__avatar(src=loggedInUser.avatarUrl)
                     else 
                         img.header__avatar(src="/" + loggedInUser.avatarUrl)
