--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -23,10 +23,11 @@
                 if !loggedInUser.avatarUrl
                     span 😀
                 else
-                    if loggedInUser.avatarUrl.includes("github")
-                        img.header__avatar(src=loggedInUser.avatarUrl)
-                    else 
-                        img.header__avatar(src="/" + loggedInUser.avatarUrl)
+                    if loggedInUser.avatarUrl
+                                if loggedInUser.avatarUrl.includes("github")
+                                    img.header__avatar(src=loggedInUser.avatarUrl, crossorigin)
+                                else
+                                    img.header__avatar(src=loggedInUser.avatarUrl, crossorigin)
 
             else
                 li
