--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -2,7 +2,7 @@ extends base.pug
 
 block content
     #videoContainer(data-id=video._id)
-        video(src=video.fileUrl)
+        video(src=video.fileUrl, crossorigin="anonymous")
         #videoControls.videoControls
             .videoControls__play
                 span#play.videoControls__playBtn
