--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -25,9 +25,9 @@
                 else
                     if loggedInUser.avatarUrl
                                 if loggedInUser.avatarUrl.includes("github")
-                                    img.header__avatar(src=loggedInUser.avatarUrl, crossorigin)
+                                    img.header__avatar(src=loggedInUser.avatarUrl)
                                 else
-                                    img.header__avatar(src=loggedInUser.avatarUrl, crossorigin)
+                                    img.header__avatar(src=loggedInUser.avatarUrl)
 
             else
                 li
